--- a/templates/calculator_results.html
+++ b/templates/calculator_results.html
@@ -5,11 +5,7 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
+        <p>You chose to add {% num_one %} and {% num_two %}. Your result is: {% answer %}</p>
 
-
-
-
-
-        
     </body>
 </html>
