--- a/templates/compliments_results.html
+++ b/templates/compliments_results.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
-
+        <h5>Hello, nice to meet you {{ users_name }}. You are {{ result }}</h5>
         
 
         
